<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/img_bmw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Salmon"
            android:text="@string/SEngine"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Orchid"
            android:text="@string/Pricelist"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/black"
        android:text="@string/SubmitYe"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/Aquamarine"
        android:text="@string/Right"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Ijo_Muda"
        android:text="@string/Left"
        app:cornerRadius="50dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/imageView12"
            android:layout_width="55dp"
            android:layout_height="74dp"
            android:layout_gravity="top|left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Ijo_Muda"
            android:text="@string/Character"
            android:textSize="28dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/Select"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="30dp" />


    </LinearLayout>







</LinearLayout>