<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/profile" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView5"
            android:layout_marginLeft="50dp"
            android:layout_width="189dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/Nama"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/eNama" />
    </TableRow>

    <TableRow
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/Phone"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/ePhone" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/eAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button3"
            android:layout_gravity="center"
            android:layout_span="2"
            android:backgroundTint="@color/Aquamarine"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/Submit" />
    </TableRow>

</TableLayout>